# GPGPU

./: .gitignore  CMakeLists.txt  CMakeLists.txt.GLEW.in  CMakeLists.txt.gbench.in  Doxyfile  GPGPU.cc
CUDA/: CMakeLists.txt  Readme.md  cuda_benchmark.cu  cuda_benchmark.h  cuda_demo.cu  cuda_demo.h  cuda_helpers.cu  cuda_helpers.h  cuda_helpers_unittest.cu
CUDA/cuda_helpers/: CMakeLists.txt  cuda_helpers.cc  cuda_helpers.h  cuda_helpers_unittest.cc
CUDA/simple_map/: CMakeLists.txt  README.md  kernel.cu
CUDA/simple_reduction/: README.md  kernel.cu
OpenCL/: CMakeLists.txt  opencl_benchmark.cc  opencl_benchmark.h  opencl_demo.cc  opencl_demo.h  opencl_helpers.cc  opencl_helpers.h  opencl_helpers_unittest.cc  random_data.cc
OpenCL-Android/: README.md
OpenCL-Android/app/: CMakeLists.txt  build.gradle
OpenCL-Android/app/src/androidTest/java/ch/collab/android/opencldemo/: ExampleInstrumentedTest.java
OpenCL-Android/app/src/main/: AndroidManifest.xml
OpenCL-Android/app/src/main/cpp/: native-lib.cpp
OpenCL-Android/app/src/main/java/ch/collab/android/opencldemo/: Device.java  MainActivity.java  Platform.java
OpenCL-Android/app/src/main/res/layout/: activity_main.xml  content_main.xml
OpenCL-Android/app/src/main/res/menu/: menu_main.xml
OpenCL-Android/app/src/main/res/values/: strings.xml
OpenCL-Android/app/src/test/java/ch/collab/android/opencldemo/: ExampleUnitTest.java
OpenCL-Android/gradle/wrapper/: gradle-wrapper.properties
OpenCL-Android/include/: README.md
OpenCL/opencl_helpers/: CMakeLists.txt  opencl_helpers.cc  opencl_helpers.h  opencl_helpers_unittest.cc
OpenGL/: .gitignore  CMakeLists.txt  README.md  UtilGLSL.cpp  opengl_demo.cc
Tools/: gtx1080_cuda.csv  run_benchmark.ps1
data/: 100000_rand_float.txt  100000_rand_int.txt
